--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/samuellundin/Testverktyg#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "client-sessions": "^0.7.0",
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.13.0",
