--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "client-sessions": "^0.7.0",
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
+    "handlebars-helper-equal": "^1.0.0",
     "mysql": "^2.13.0",
     "uuid": "^3.0.1"
   }
