--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "client-sessions": "^0.7.0",
+    "deepcopy": "^0.6.3",
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
     "handlebars-helper-equal": "^1.0.0",
