--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-handlebars": "^3.0.0",
     "handlebars-helper-equal": "^1.0.0",
     "mysql": "^2.13.0",
+    "simple-encryptor": "^1.1.0",
+    "tweetnacl": "^1.0.0-rc.1",
     "uuid": "^3.0.1"
   }
 }
