--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
     "handlebars-helper-equal": "^1.0.0",
+    "jquery.terminal": "^1.0.7",
     "mysql": "^2.13.0",
     "simple-encryptor": "^1.1.0",
     "tweetnacl": "^1.0.0-rc.1",
