Provtagarsidan visar prov! Och kör NPM INSTALL
Fan vad svårt det var. Var tvungen att ladda ner en modul som heter
async för att ironiskt nog kunna köra mina SQL-queries synkroniserat, så
ni måste köra NPM INSTALL.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/samuellundin/Testverktyg#readme",
   "dependencies": {
+    "async": "^2.1.5",
     "body-parser": "^1.16.1",
     "client-sessions": "^0.7.0",
     "deepcopy": "^0.6.3",
