--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deepcopy": "^0.6.3",
     "express": "^4.15.0",
     "express-handlebars": "^3.0.0",
+    "express-mailer": "^0.3.1",
     "handlebars-helper-equal": "^1.0.0",
     "jquery.terminal": "^1.0.7",
     "mysql": "^2.13.0",
