--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^3.0.0",
     "express-mailer": "^0.3.1",
     "handlebars-helper-equal": "^1.0.0",
+    "handlebars-pdf": "^1.0.1",
     "jquery.terminal": "^1.0.7",
     "mysql": "^2.13.0",
     "simple-encryptor": "^1.1.0",
